--- a/sparkom-front/src/assets/css/HeaderOption.css
+++ b/sparkom-front/src/assets/css/HeaderOption.css
@@ -15,9 +15,14 @@
 .headerOption__icon {
   object-fit: contain;
   height: 25px !important;
-  width : 25px !important;
+  width: 25px !important;
 }
 
 .headerOption:hover {
   color: black;
+}
+
+.userav {
+  margin-top: -5px;
+  margin-bottom: -500px;
 }
