fix: Settings Routing

--- a/sparkom-front/src/assets/css/main.css
+++ b/sparkom-front/src/assets/css/main.css
@@ -13000,7 +13000,7 @@ ol ol li {
   line-height: 34px;
   text-align: center;
   color: #fff;
-  background-color: #ff5e3a;
+  background-color: #0069d9;
   font-size: 10px;
   font-weight: 800;
 }
