--- a/sparkom-front/src/index.css
+++ b/sparkom-front/src/index.css
@@ -7,6 +7,7 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  background: #edf2f6;
 }
 
 code {
