--- a/sparkom-front/src/assets/css/main.css
+++ b/sparkom-front/src/assets/css/main.css
@@ -14047,7 +14047,7 @@ ol ol li {
   padding: 25px;
   color: #fff;
   position: relative;
-  background: url(../img/bg-birthdays.jpg) no-repeat;
+  /* background: url(../img/bg-birthdays.jpg) no-repeat; */
   background-size: cover;
   border-radius: 5px;
 }
@@ -17119,7 +17119,7 @@ img.mfp-img {
   border-top: 1px solid white;
   border-bottom: 1px solid black;
   background-color: rgba(50, 50, 50, 0.7);
-  background-image: url();
+  /* background-image: url(); */
   background-position: right 10px top 100px;
   background-repeat: no-repeat;
 }
@@ -17668,7 +17668,7 @@ img.mfp-img {
   display: none;
   height: 115px;
   width: 25px;
-  background: url();
+  /* background: url(); */
   background: rgba(50, 50, 50, 0.7);
   border-radius: 0;
   top: -115px;
