Extern Api mail

--- a/sparkom-front/src/assets/css/main.css
+++ b/sparkom-front/src/assets/css/main.css
@@ -123,7 +123,13 @@ Description: "HTML-template"
 /*------------- #THEME-STYLES --------------*/
 /*------------- #VARIABLES --------------*/
 /*------------- #HEADER --------------*/
-
+.buttonF {     
+  background-color: Transparent;
+  background-repeat:no-repeat;
+  border: none;
+  cursor:pointer;
+  overflow: hidden;        
+}
 .photo {
   height: 170px;
   width: 170px;
