--- a/sparkom-front/src/assets/css/Jobs.css
+++ b/sparkom-front/src/assets/css/Jobs.css
@@ -195,12 +195,12 @@
   margin-bottom: 4%;
   margin-right: 2%;
 }
-p {
+/* p {
   color: black;
   clear: both;
   display: inline-block;
   white-space: nowrap;
-}
+} */
 
 .aligniconsinput {
   display: flex;
